[gd_scene load_steps=10 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://input scenes/text input big.tscn" type="PackedScene" id=2]
[ext_resource path="res://input scenes/text input small.tscn" type="PackedScene" id=3]
[ext_resource path="res://input scenes/option input.tscn" type="PackedScene" id=4]
[ext_resource path="res://input scenes/yn input.tscn" type="PackedScene" id=5]
[ext_resource path="res://log.tscn" type="PackedScene" id=6]
[ext_resource path="res://blank.png" type="Texture" id=7]
[ext_resource path="res://program info.gd" type="Script" id=8]
[ext_resource path="res://options.gd" type="Script" id=9]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 354.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="input" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 354.0
margin_bottom = 592.0
label = "EFT input"
show_import_b = true

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 358.0
margin_right = 658.0
margin_bottom = 592.0
rect_min_size = Vector2( 300, 0 )

[node name="name" parent="HBoxContainer/VBoxContainer2" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 300.0
margin_bottom = 24.0
label = "Name (optional):"

[node name="id" parent="HBoxContainer/VBoxContainer2" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_right = 300.0
margin_bottom = 52.0
label = "ID (optional):"

[node name="date" parent="HBoxContainer/VBoxContainer2" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 56.0
margin_right = 300.0
margin_bottom = 80.0
label = "Date (optional):"

[node name="difficulty" parent="HBoxContainer/VBoxContainer2" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 84.0
margin_right = 300.0
margin_bottom = 108.0
label = "Difficulty:"

[node name="alpha" parent="HBoxContainer/VBoxContainer2" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 112.0
margin_right = 300.0
margin_bottom = 136.0
label = "Alpha usable"

[node name="show skills" parent="HBoxContainer/VBoxContainer2" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 140.0
margin_right = 300.0
margin_bottom = 164.0
label = "Show skills by default"

[node name="show note" parent="HBoxContainer/VBoxContainer2" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 168.0
margin_right = 300.0
margin_bottom = 192.0
label = "Show notes by default"

[node name="show TOC" parent="HBoxContainer/VBoxContainer2" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 196.0
margin_right = 300.0
margin_bottom = 220.0
label = "Show on TOC"

[node name="ammo" parent="HBoxContainer/VBoxContainer2" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 224.0
margin_right = 300.0
margin_bottom = 248.0
label = "Add loaded ammo to cargo"

[node name="raw" parent="HBoxContainer/VBoxContainer2" instance=ExtResource( 5 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 224.0
margin_right = 300.0
margin_bottom = 248.0
label = "Include raw EFT data"

[node name="notes" parent="HBoxContainer/VBoxContainer2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 252.0
margin_right = 300.0
margin_bottom = 420.0
label = "Notes:"

[node name="skills" parent="HBoxContainer/VBoxContainer2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 424.0
margin_right = 300.0
margin_bottom = 592.0
label = "Skills:"

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 662.0
margin_right = 1016.0
margin_bottom = 592.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer3"]
margin_right = 354.0
margin_bottom = 20.0

[node name="parse" type="Button" parent="HBoxContainer/VBoxContainer3/HBoxContainer"]
margin_right = 239.0
margin_bottom = 20.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
text = "Parse input"

[node name="clear" type="Button" parent="HBoxContainer/VBoxContainer3/HBoxContainer"]
margin_left = 243.0
margin_right = 287.0
margin_bottom = 20.0
focus_mode = 0
enabled_focus_mode = 0
text = "Clear"

[node name="options" type="Button" parent="HBoxContainer/VBoxContainer3/HBoxContainer"]
margin_left = 291.0
margin_right = 354.0
margin_bottom = 20.0
text = "Options"

[node name="output" parent="HBoxContainer/VBoxContainer3" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 354.0
margin_bottom = 438.0
label = "Output:"
show_export_b = true

[node name="log" parent="HBoxContainer/VBoxContainer3" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 442.0
margin_right = 354.0
margin_bottom = 592.0

[node name="options" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="options"]
modulate = Color( 0.101961, 0.101961, 0.101961, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="options"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="options/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="options/VBoxContainer/HBoxContainer"]
margin_right = 921.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="options/VBoxContainer/HBoxContainer"]
margin_left = 925.0
margin_right = 1024.0
margin_bottom = 20.0
size_flags_vertical = 0
text = "Close options"

[node name="VBoxContainer" type="VBoxContainer" parent="options/VBoxContainer"]
margin_top = 24.0
margin_right = 706.0
margin_bottom = 206.0
size_flags_horizontal = 0

[node name="program info" type="Label" parent="options/VBoxContainer/VBoxContainer"]
margin_right = 706.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
script = ExtResource( 8 )

[node name="clear cache" type="Button" parent="options/VBoxContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 119.0
margin_bottom = 64.0
size_flags_horizontal = 0
text = "Clear item cache"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="info" type="Label" parent="options/VBoxContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 706.0
margin_bottom = 158.0
rect_min_size = Vector2( 0, 90 )
size_flags_vertical = 1
text = "\"Clear cache\" will delete all saved module info.
Use this when a new module has same name as old module.
This will also remove outdated names from the cache preventing you from accidentally using outdated names.
Cache does not need to be deleted when modules change names."

[node name="HBoxContainer" type="HBoxContainer" parent="options/VBoxContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 706.0
margin_bottom = 182.0

[node name="Label" type="Label" parent="options/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 57.0
margin_bottom = 17.0
text = "Website:"

[node name="website" type="Button" parent="options/VBoxContainer/VBoxContainer/HBoxContainer"]
modulate = Color( 0.643137, 0.690196, 1, 1 )
margin_left = 61.0
margin_right = 446.0
margin_bottom = 20.0
text = "https://github.com/Hirmuolio/ShipFitting-template-creator"
flat = true
align = 0
[connection signal="pressed" from="HBoxContainer/VBoxContainer3/HBoxContainer/parse" to="." method="_on_parse_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer3/HBoxContainer/clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer3/HBoxContainer/options" to="options" method="_on_options_pressed"]
[connection signal="pressed" from="options/VBoxContainer/HBoxContainer/Button" to="options" method="_on_Button_pressed"]
[connection signal="pressed" from="options/VBoxContainer/VBoxContainer/clear cache" to="." method="_on_clear_cache_pressed"]
[connection signal="pressed" from="options/VBoxContainer/VBoxContainer/HBoxContainer/website" to="options" method="_on_website_pressed"]
